unpackaged/main/default/objects/bt_stripe__Gateway_Order_Item__c/bt_stripe__Gateway_Order_Item__c.object-meta.xml
<CustomObject>
    <description>Used by Stripe. This maps to an Order Item record in the Stripe API.</description>
    <label>Gateway Order Item</label>
    <nameField>
        <displayFormat>ORI-{00000}</displayFormat>
        <label>Gateway Order Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gateway Order Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>