unpackaged/main/default/objects/bt_stripe__Gateway_Order_Item__c/fields/bt_stripe__Amount__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>