unpackaged/main/default/objects/bt_stripe__Gateway_Order_Item__c/fields/bt_stripe__Gateway_Order_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Gateway_Order_Item_Id__c</fullName>
    <label>Gateway Order Item Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>