unpackaged/main/default/objects/bt_stripe__Gateway_Order_Item__c/fields/bt_stripe__Gateway_SKU__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Gateway_SKU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gateway SKU</label>
    <referenceTo>bt_stripe__Gateway_SKU__c</referenceTo>
    <relationshipLabel>Gateway Order Items</relationshipLabel>
    <relationshipName>Gateway_Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>