unpackaged/main/default/objects/bt_stripe__Gateway_Order_Item__c/fields/bt_stripe__Quantity__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>